# agent-one

./: .env-example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  get_files_info_test.py  main.py  pyproject.toml
.github/workflows/: python-app.yml
functions/: get_files_info.py  tests.py
tests/: test_get_files_info.py
